--- a/apps/mobile/locales/en.json
+++ b/apps/mobile/locales/en.json
@@ -269,10 +269,6 @@
     "failedToOpenImagePicker": "Couldn't open gallery. Try again.",
     "failedToOpenFilePicker": "Couldn't open file picker. Try again."
   },
-  "billing": {
-    "credits": "Credits",
-    "remaining": "remaining"
-  },
   "models": {
     "selectModel": "Select Model",
     "chooseModelFor": "Choose a model for {{agent}}"
@@ -306,5 +302,76 @@
     "returnToHome": "Return to home",
     "createNew": "Create new {{item}}",
     "openConversation": "Open Chat: {{title}}"
+  },
+  "billing": {
+    "title": "Billing & Subscription",
+    "currentPlan": "Current Plan",
+    "credits": "Credits",
+    "creditsAvailable": "credits available",
+    "creditsRemaining": "credits remaining",
+    "upgradePlan": "Upgrade Plan",
+    "choosePlan": "Choose Your Plan",
+    "selectPlan": "Select Plan",
+    "currentActive": "Current Plan",
+    "startTrial": "Start 7-Day Free Trial",
+    "starting": "Starting...",
+    "trialActive": "Trial Active",
+    "trialEnded": "Your trial has ended",
+    "trialEnding": "Trial ending soon",
+    "trialDaysRemaining": "{{days}} days remaining",
+    "subscriptionRequired": "Subscription Required",
+    "insufficientCredits": "Insufficient credits",
+    "lowCredits": "Low credits",
+    "lowCreditsWarning": "Your credit balance is low. Purchase more to continue using the service.",
+    "purchaseCredits": "Purchase Credits",
+    "buyCredits": "Buy Credits",
+    "manageBilling": "Manage Billing",
+    "manageSubscription": "Manage Subscription",
+    "monthlyPrice": "/month",
+    "yearlyPrice": "/year",
+    "billedMonthly": "billed monthly",
+    "billedYearly": "billed yearly",
+    "yearlyDiscount": "15% off",
+    "savePerYear": "Save ${{amount}} per year",
+    "neverExpires": "Never expires",
+    "expires": "Expires {{date}}",
+    "includedCredits": "{{amount}} included credits",
+    "unlimitedCredits": "Unlimited",
+    "usageLimitReached": "Usage limit reached",
+    "upgradeRequired": "Upgrade required",
+    "noSubscription": "No active subscription",
+    "cancelledSubscription": "Subscription cancelled",
+    "renewsOn": "Renews on {{date}}",
+    "cancelledOn": "Cancelled on {{date}}",
+    "endsOn": "Ends on {{date}}",
+    "monthly": "Monthly",
+    "yearly": "Yearly",
+    "freeTrial": "7-Day Free Trial",
+    "trialBenefits": "What's included:",
+    "trialCredit": "$5 in Credits",
+    "trialDuration": "7 Days Free",
+    "trialFullAccess": "Full access to all AI models",
+    "trialCancelAnytime": "Cancel anytime, no charge",
+    "noChargeDuringTrial": "No charge during trial",
+    "trialMessage": "Your card will only be charged after 7 days if you don't cancel. You can cancel anytime from billing settings.",
+    "agreeToTerms": "By starting your trial, you agree to our Terms of Service and Privacy Policy",
+    "packageAmount": "${{amount}}",
+    "selectAmount": "Select Amount",
+    "customAmount": "Custom Amount",
+    "purchaseAmount": "Purchase ${{amount}}",
+    "purchasing": "Processing...",
+    "purchaseComplete": "Purchase complete!",
+    "purchaseFailed": "Purchase failed",
+    "checkoutCancelled": "Checkout cancelled",
+    "returnToApp": "Return to app",
+    "viewBilling": "View Billing",
+    "balance": "Balance",
+    "lifetime": "Lifetime",
+    "expiring": "Expiring",
+    "nonExpiring": "Non-expiring",
+    "loading": "Loading billing information...",
+    "error": "Failed to load billing information",
+    "tryAgain": "Try again",
+    "remaining": "remaining"
   }
 }
