--- a/frontend/translations/de.json
+++ b/frontend/translations/de.json
@@ -264,6 +264,10 @@
     "autonomousDescription": "Tiefenarbeitsmodus für mehrstufige Problemlösung",
     "chat": "Chat",
     "chatDescription": "Einfache Unterhaltung",
+    "sampleAnswers": "Beispielantworten",
+    "samplePrompts": "Beispiel-Prompts",
+    "waitingForUserResponse": "Kortix wird nach deiner Antwort eigenständig weiterarbeiten.",
+    "taskCompleted": "Aufgabe abgeschlossen",
     "uploadingFiles": "Lade {count} Datei{plural} hoch...",
     "uploadingFilesOne": "Lade {count} Datei hoch...",
     "uploadingFilesMany": "Lade {count} Dateien hoch...",
