--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -263,6 +263,10 @@
     "autonomousDescription": "Deep work mode for multi-step problem solving",
     "chat": "Chat",
     "chatDescription": "Simple back-and-forth conversation",
+    "sampleAnswers": "Sample answers",
+    "samplePrompts": "Sample prompts",
+    "waitingForUserResponse": "Kortix will proceed to work autonomously after you answer.",
+    "taskCompleted": "Task completed",
     "uploadingFiles": "Uploading {count} file{plural}...",
     "uploadingFilesOne": "Uploading {count} file...",
     "uploadingFilesMany": "Uploading {count} files...",
