--- a/frontend/translations/fr.json
+++ b/frontend/translations/fr.json
@@ -235,6 +235,10 @@
     "autonomousDescription": "Mode travail approfondi pour résolution de problèmes en plusieurs étapes",
     "chat": "Chat",
     "chatDescription": "Conversation simple aller-retour",
+    "sampleAnswers": "Exemples de réponses",
+    "samplePrompts": "Exemples de prompts",
+    "waitingForUserResponse": "Kortix continuera à travailler de manière autonome après ta réponse.",
+    "taskCompleted": "Tâche terminée",
     "uploadingFiles": "Téléchargement de {count} fichier{plural}...",
     "uploadingFilesOne": "Téléchargement de {count} fichier...",
     "uploadingFilesMany": "Téléchargement de {count} fichiers...",
